[gd_scene load_steps=16 format=3 uid="uid://dsun711phm2g5"]

[ext_resource type="Script" uid="uid://ct58dow0gl3ju" path="res://player_interacting_box.gd" id="1_60s2t"]
[ext_resource type="FontVariation" uid="uid://d0ele2j0el6nd" path="res://font for jumpy.tres" id="2_l6xvm"]
[ext_resource type="Script" uid="uid://bjcks1pj62lot" path="res://Player yes interact.gd" id="3_cbnue"]
[ext_resource type="AudioStream" uid="uid://bucvd2utgmbls" path="res://Recording (15).mp3" id="4_cbnue"]
[ext_resource type="Script" uid="uid://b410ltxtj2gow" path="res://player no interact.gd" id="4_t2d24"]

[sub_resource type="Theme" id="Theme_nkb6k"]

[sub_resource type="Theme" id="Theme_2j1hs"]
default_font = ExtResource("2_l6xvm")

[sub_resource type="Theme" id="Theme_5c12f"]
default_font = ExtResource("2_l6xvm")

[sub_resource type="FontVariation" id="FontVariation_2j1hs"]
variation_embolden = 0.3
variation_transform = Transform2D(1, 0.15, 0.15, 1, 0, 0)
spacing_glyph = 5

[sub_resource type="Theme" id="Theme_60s2t"]
default_font = SubResource("FontVariation_2j1hs")
default_font_size = 32

[sub_resource type="FontVariation" id="FontVariation_5c12f"]
variation_embolden = 0.3
variation_transform = Transform2D(1, 0.15, 0.15, 1, 0, 0)
spacing_glyph = 5

[sub_resource type="Theme" id="Theme_l6xvm"]
default_font = SubResource("FontVariation_5c12f")
default_font_size = 32

[sub_resource type="Animation" id="Animation_5c12f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2j1hs"]
resource_name = "Start think anim"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.0334, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -14), Vector2(0, 150), Vector2(0, -40), Vector2(0, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lyws6"]
_data = {
&"RESET": SubResource("Animation_5c12f"),
&"Start think anim": SubResource("Animation_2j1hs")
}

[node name="Player Interacting Box" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 154.0
offset_top = 655.0
offset_right = 154.0
offset_bottom = 655.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.47833, 1.47833)
script = ExtResource("1_60s2t")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = -14.0
offset_right = 854.0
offset_bottom = 105.0
theme = SubResource("Theme_nkb6k")

[node name="Label" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 15.0
offset_right = 836.0
offset_bottom = 104.0
theme = SubResource("Theme_2j1hs")
text = "Just some placeholder text!"

[node name="UnderLabel" type="RichTextLabel" parent="Panel"]
modulate = Color(1, 1, 1, 0.294118)
layout_mode = 0
offset_left = 12.0
offset_top = 15.0
offset_right = 836.0
offset_bottom = 104.0
theme = SubResource("Theme_5c12f")
text = "Just some placeholder text!"

[node name="YesButton" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 386.923
offset_top = 50.0
offset_right = 457.923
offset_bottom = 103.0
theme = SubResource("Theme_60s2t")
text = "Yes"
script = ExtResource("3_cbnue")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Panel/YesButton"]
stream = ExtResource("4_cbnue")

[node name="NoButton" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 119.053
offset_top = 52.0
offset_right = 177.053
offset_bottom = 105.0
theme = SubResource("Theme_l6xvm")
text = "No"
script = ExtResource("4_t2d24")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Panel/NoButton"]
stream = ExtResource("4_cbnue")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lyws6")
}

[connection signal="pressed" from="Panel/YesButton" to="Panel/YesButton" method="_on_pressed"]
[connection signal="pressed" from="Panel/NoButton" to="Panel/NoButton" method="_on_pressed"]
